  FilteredTableModel.rowColumn() moved to RowColumn
  Some unit test improvements, continued
  TableSortModel.getSortingDirective() and getSortingPriority() replaced with getSortingState()
  Util.map() return type changed from Map<T, Collection<V>> to Map<T, List<V>>
  LocalEntityConnection.selectMany(List<Entity.Key> keys) now handles keys with different entityIds
  SwingEntityTableModel bug fixed, adding entities on insert now filters out entities of different type
  HttpEntityConnection.selectMany(List<Entity.Key> keys) now handles keys with different entityIds
  HttpEntityConnection.delete(List<Entity.Key> keys) now handles keys with different entityIds
  NavigableImagePanel, imageMarkPoints removed, paintComponent() no longer final
  EntityEditPanel.InsertEntityAction, buttons enabled state linked to the associated components enabled state
  FrameworkMessages, insert and save captions split up
  NavigableImagePanel, some javadoc improvements
  Conjunction.toString() removed
  HttpEntityConnection.readBlob() and writeBlob() implemented and tested
  LocalEntityConnectionTest, blob tests improved
  Cleanup of create_h2_db.sql scripts for unit tests
0.11.4 [server/client incompatible]
  Property.hasDefaultValue() added
  Entities.entity(entityId, valueProvider) renamed to defaultEntity(), now excludes properties which columns have default values
  NavigableImagePanel.showImage() removed, readImage() added, no dependencies on jminor remaining, module-info fixed
  OracleDatabase resource bundle bug fix, value_missing key added (fixed in 0.11.3 tag as well)
  EntityLookupField bug fixed, now uses SwingMessages for dialog title (fixed in 0.11.3 tag as well)
  UiUtil.prepareScrollPanelDialog() no longer makes dialog visible and no longer sets the ok button as the default button (problematic Enter key behaviour)
  UiUtil.selectValues() bug fixed, now ensures the default selected value is visible and escape key means cancel